--- a/all/themes/pixelgarage/less/header.less
+++ b/all/themes/pixelgarage/less/header.less
@@ -84,6 +84,7 @@ header#navbar {
       position: absolute;
       top: 0;
       right: 0;
+      padding: 0;
       width: 60%;
       height: auto;
       background-color: rgba(255,255,255, 1.0);
