--- a/all/themes/pixelgarage/less/pxlComponents/pxlComponents.less
+++ b/all/themes/pixelgarage/less/pxlComponents/pxlComponents.less
@@ -14,8 +14,10 @@
 // nodes
 @import "node-page";
 @import "node-webform";
+@import "node-course";
 
 // views
 @import "view-banners";
 @import "view-locations";
 @import "view-courses";
+@import "view-course-tabs";
