--- a/all/themes/pixelgarage/less/pxlComponents/view-courses.less
+++ b/all/themes/pixelgarage/less/pxlComponents/view-courses.less
@@ -25,7 +25,7 @@
           margin: 50px 0 0;
           padding: 0;
           font-family: @pxl-text-font-light;
-          font-size: @font-size-h1;
+          #pxl-mixins.font-size-responsive(@font-size-h1);
           color: @text-color;
           line-height: 1;
 
@@ -78,8 +78,9 @@
 
             a {
               display: block;
+              width: 80%;
               padding: 10px 10px 12px;
-              font-size: @font-size-base;
+              font-size: 14px;
               color: @text-color-light;
               text-decoration: none;
             }
@@ -88,11 +89,11 @@
           span.short-description {
             cursor: pointer;
             pointer-events: none;
-            display: inline-block;
+            display: none;
             position: absolute;
             top: 0;
             right: 100px;
-            padding: 10px 15px 12px;
+            padding: 10px 10px 12px;
             color: #fff;
           }
 
@@ -104,13 +105,43 @@
 
             a {
               display: block;
-              padding: 10px 15px 12px;
+              padding: 10px 10px 12px;
+              font-size: 14px;
               color: #fff;
               text-decoration: none;
 
               &:hover, &.active {
                 color: #fff;
               }
+            }
+          }
+
+          @media @narrow {
+            .panel-title {
+              a {
+                font-size: 15px;
+              }
+            }
+
+            span.details {
+              font-size: 15px;
+            }
+          }
+
+          @media @tablet {
+            .panel-title {
+              a {
+                width: 100%;
+                font-size: @font-size-base;
+              }
+            }
+
+            span.short-description {
+              display: inline-block;
+            }
+
+            span.details {
+              font-size: @font-size-base;
             }
           }
 
