--- a/all/themes/pixelgarage/less/variable-overrides.less
+++ b/all/themes/pixelgarage/less/variable-overrides.less
@@ -13,6 +13,7 @@
 @pxl-color-hso-hs: rgb(232, 116, 49);
 @pxl-color-hso-ks: rgb(120, 114, 159);
 @pxl-color-hso-ex: rgb(177, 168, 149);
+@pxl-color-hso-gray: rgb(235,235,235);
 
 @pxl-color-footer: #999;
 @pxl-color-footer-border: #666;
